--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     <footer>
         <div class="container">
             <p>Thank you for using our cheat sheet collection! Happy coding! 🚀</p>
-            <a href="https://www.buymeacoffee.com/haim_cohen" class="support-link" target="_blank">Support the project by buying us a coffee ☕</a>
+            <!--a href="https://www.buymeacoffee.com/haim_cohen" class="support-link" target="_blank">Support the project by buying us a coffee ☕</a-->
         </div>
     </footer>
 </body>
